--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,13 @@ MigrationBackup/
 
 .vscode
 src/.idea/*
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
