--- a/src/Services/Discount/Discount.API/Discount.API.csproj
+++ b/src/Services/Discount/Discount.API/Discount.API.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DockerComposeProjectPath>../../../docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>510cbb74-6d68-4a6d-b4f4-50995da926e5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
