--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: "3.4"
 
 services:
   catalogdb:
@@ -22,6 +22,12 @@ services:
       context: .
       dockerfile: Services/Basket/Basket.API/Dockerfile
 
-volumes: 
+  discount.api:
+    image: ${DOCKER_REGISTRY-}discount
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.API/Dockerfile
+
+volumes:
   mongo_data:
   portainer_data:
